fetch question and answer data